Mise à jour automatique des fichiers

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a href="#course">Course</a></li>
         </ul>
     </div>
+    // test
 
     <main>
         <h1>Bienvenue sur mon site de recettes</h1>
