--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orpps - Accueil</title>
-    <link rel="icon" href="/assets/images/logos_orpps/orpps_favicon.png" type="image/png">
+    <link rel="icon" href="https://fxpoyosomio.github.io/Orpps/assets/images/logos_orpps/orpps_favicon.png" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
