--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orpps - Accueil</title>
-    <link rel="icon" href="https://fxpoyosomio.github.io/Orpps/assets/images/logos_orpps/orpps_favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/Orpps/assets/images/logos_orpps/orpps_favicon.png" type="image/png">
+    <link rel="stylesheet" href="/Orpps/css/styles.css">
 </head>
 <body>
 
