--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <div id="footer"></div>
 
     <!-- Scripts -->
-    <script src="/js/script.js"></script>
+    <script src="/Orpps/js/script.js"></script>
 </body>
 </html>
