ajout des fonts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Contenu de la page -->
     <main>
         <h1>Bienvenue sur Orpps</h1>
-        <p>Explorez nos recettes et gérez votre planification et vos courses.</p>
+        <p>Explorez nos super recettes et gérez votre planification et vos courses.</p>
     </main>
 
     <!-- Inclure le footer -->
