path to style et js corrected

--- a/liste_de_course/liste_de_course.html
+++ b/liste_de_course/liste_de_course.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste de Course</title>
-    <link rel="stylesheet" href="/Orpps/assets/css/styles.css"> <!-- Incluez vos fichiers CSS ici -->
+    <link rel="stylesheet" href="/Orpps/css/styles.css"> <!-- Incluez vos fichiers CSS ici -->
 </head>
 <body>
     <div id="header"></div> <!-- Conteneur pour charger le header -->
@@ -15,6 +15,6 @@
         <!-- Ajoutez votre contenu ici -->
     </main>
 
-    <script src="/Orpps/script.js"></script> <!-- Incluez votre fichier JS ici -->
+    <script src="/Orpps/js/script.js"></script> <!-- Incluez votre fichier JS ici -->
 </body>
 </html>
