ajout de container dans main

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header"></div>
     
     <!-- Contenu de la page -->
-    <main>
+    <main class="container">
         <h1>Bienvenue sur Orpps</h1>
         <p>Explorez nos super recettes et gérez votre planification et vos courses.</p>
     </main>
