add container to recettes et liste de course

--- a/liste_de_course.html
+++ b/liste_de_course.html
@@ -9,7 +9,7 @@
 <body>
     <div id="header"></div> <!-- Conteneur pour charger le header -->
 
-    <main>
+    <main class="container">
         <h1>Liste de Course</h1>
         <p>Bienvenue sur la page de la liste de course !</p>
         <!-- Ajoutez votre contenu ici -->
