--- a/recettes.html
+++ b/recettes.html
@@ -9,7 +9,7 @@
 <body>
     <div id="header"></div> <!-- Conteneur pour charger le header -->
 
-    <main>
+    <main class="container">
         <h1>Recettes</h1>
         <p>Bienvenue sur la page des recettes !</p>
         <!-- Ajoutez votre contenu ici -->
