--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -339,6 +339,8 @@
     </style>
 </head>
 <body>
+    <div id="header"></div> <!-- Conteneur pour charger le header -->
+
     <div class="page-container">
         <h1 class="titre-recette">Magret de canard (sauce au miel et thym)</h1>
         <div class="ingredients">
@@ -803,6 +805,7 @@
             this.value = this.value.replace(/[^0-9]/g, ''); // N'accepte que les chiffres
         });
 
+        
 
 
 
@@ -810,5 +813,8 @@
 
 
 </script>
+
+<script src="/Orpps/js/script.js"></script> <!-- Incluez votre fichier JS ici -->
+
 </body>
 </html>
