--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -16,6 +16,7 @@
 
 
     <script async="async" src="//platform.getbring.com/widgets/import.js"></script>
+    <link rel="stylesheet" href="/Orpps/css/styles.css"> <!-- Incluez vos fichiers CSS ici -->
     <style>
         body { font-family: 'Open Sans', sans-serif; }
         h1 { color: #CB6863; font-weight: 700; font-size: 45px; }
