fix width recette

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -17,7 +17,7 @@
 
     <script async="async" src="//platform.getbring.com/widgets/import.js"></script>
     <link rel="stylesheet" href="/Orpps/css/styles.css"> <!-- fichiers global CSS ici -->
-    <!--<link rel="stylesheet" href="/Orpps/css/recettes.css">   fichiers recettes CSS ici -->  
+    <link rel="stylesheet" href="/Orpps/css/recettes.css">  <!-- fichiers recettes CSS ici -->  
 </head>
 <body>
     <div id="header"></div> <!-- Conteneur pour charger le header -->
