erreru close div section ingredient container

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-ingredient-container"></div>
+                <div class="section-ingredient-container">
                     <div class="portion-control">
                         <div class="portion-control__decrement minus" onclick="updatePortions(-1)">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"> <!-- Ajout de width et height -->
