fix margin titre ingrédients

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -39,7 +39,7 @@
 
             <div class="section-ingredient">
                 <div class="section-ingredient-container">
-                    <div class="titre-section-container">
+                    <div class="titre-section-container" style="padding:0 0 0 15px">
                         <svg class="titre-section-image" width="64px" height="64px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512.00 512.00" xml:space="preserve" fill="#CB6863" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)" stroke="#CB6863" stroke-width="0.00512">
                             <style type="text/css"> .st0{fill:#CB6863;} </style>
                             <g>
@@ -71,7 +71,6 @@
                         </div>
                     </div>
                 </div>
-                <div style="width: 50px;"></div>
             </div>
 
 
