--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -11,14 +11,14 @@
         "@context": "http://schema.org",
         "@type": "Recipe",
         "name": "Magret de canard (sauce au miel et thym)",
-        "recipeIngredient": ["2  magrets de canard", "1 pincée  de piment d'espellette", "4 cuil. à soupe  de miel de montagne", "0.25  citron jaune", "20 cl.  de fond de veau", "null  Poivre noir", "40 g.  de beurre doux", "null  Sel fin", "4 cuil. à soupe  de vinaigre de vin rouge"]
+        "recipeIngredient": ["2 , Magret de canard", "1 pincée, Piment d'Espellette", "4 cuil. à soupe, Miel de montagne", "0.25 , Citron jaune", "20 cl., Fond de veau", "null , Poivre noir", "40 g., Beurre Doux", "null , Sel fin", "4 cuil. à soupe, Vinaigre de vin rouge"]
         }
     </script>
 
 
     <script async="async" src="//platform.getbring.com/widgets/import.js"></script>
     <link rel="stylesheet" href="/Orpps/css/styles.css"> <!-- fichiers global CSS ici -->
-    <link rel="stylesheet" href="/Orpps/css/recettes.css">  <!-- fichiers recettes CSS ici -->  
+    <link rel="stylesheet" href="/Orpps/css/recettes.css"> <!--  fichiers recettes CSS ici -->  
 </head>
 <body>
     <div id="header"></div> <!-- Conteneur pour charger le header -->
@@ -426,7 +426,7 @@
     </div>
     <script>
         // Récupération des ingrédients pour la mise à jour
-        const originalIngredients = [{"quantite":2,"unite":"","nom":"magrets de canard","order":"[1]","ordernb":1,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Viandes et Poissons/Volaille/Canard/Magret%20de%20canard.jpg"]},{"quantite":1,"unite":"pincée","nom":" de piment d'espellette","order":"[5]","ordernb":5,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Épice/Piment%20d'Espellette.jpg"]},{"quantite":4,"unite":"cuil. à soupe","nom":" de miel de montagne","order":"[2]","ordernb":2,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie sucrée/Confiture, miel, pâte à tartiner/Miel%20de%20montagne.jpg"]},{"quantite":0.25,"unite":"","nom":"citron jaune","order":"[9]","ordernb":9,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Fruits et Légumes/Fruits/Fruit à pépins, Agrumes/Citron%20jaune.jpg"]},{"quantite":20,"unite":"cl.","nom":" de fond de veau","order":"[4]","ordernb":4,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Bouillon et fond de sauce/Fond%20de%20veau.jpg"]},{"quantite":null,"unite":"","nom":["Poivre noir"],"order":"[7]","ordernb":7,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Sel et poivre /Poivre%20noir.jpg"]},{"quantite":40,"unite":"g.","nom":" de beurre doux","order":"[8]","ordernb":8,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Produits laitiers et Crèmerie/Crèmerie/Beurre/Beurre%20Doux.jpg"]},{"quantite":null,"unite":"","nom":["Sel fin"],"order":"[6]","ordernb":6,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Sel et poivre /Sel%20fin.jpg"]},{"quantite":4,"unite":"cuil. à soupe","nom":" de vinaigre de vin rouge","order":"[3]","ordernb":3,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Huile et vinaigre/Vinaigre%20de%20vin%20rouge.jpg"]}];
+        const originalIngredients = [{"quantite":2,"unite":"","nom":"magrets de canard","simplename":["Magret de canard"],"order":"[1]","ordernb":1,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Viandes et Poissons/Volaille/Canard/Magret%20de%20canard.jpg"]},{"quantite":1,"unite":"pincée","nom":" de piment d'espellette","simplename":["Piment d'Espellette"],"order":"[5]","ordernb":5,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Épice/Piment%20d'Espellette.jpg"]},{"quantite":4,"unite":"cuil. à soupe","nom":" de miel de montagne","simplename":["Miel de montagne"],"order":"[2]","ordernb":2,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie sucrée/Confiture, miel, pâte à tartiner/Miel%20de%20montagne.jpg"]},{"quantite":0.25,"unite":"","nom":"citron jaune","simplename":["Citron jaune"],"order":"[9]","ordernb":9,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Fruits et Légumes/Fruits/Fruit à pépins, Agrumes/Citron%20jaune.jpg"]},{"quantite":20,"unite":"cl.","nom":" de fond de veau","simplename":["Fond de veau"],"order":"[4]","ordernb":4,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Bouillon et fond de sauce/Fond%20de%20veau.jpg"]},{"quantite":null,"unite":"","nom":["Poivre noir"],"simplename":["Poivre noir"],"order":"[7]","ordernb":7,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Sel et poivre /Poivre%20noir.jpg"]},{"quantite":40,"unite":"g.","nom":" de beurre doux","simplename":["Beurre Doux"],"order":"[8]","ordernb":8,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Produits laitiers et Crèmerie/Crèmerie/Beurre/Beurre%20Doux.jpg"]},{"quantite":null,"unite":"","nom":["Sel fin"],"simplename":["Sel fin"],"order":"[6]","ordernb":6,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Sel et poivre /Sel%20fin.jpg"]},{"quantite":4,"unite":"cuil. à soupe","nom":" de vinaigre de vin rouge","simplename":["Vinaigre de vin rouge"],"order":"[3]","ordernb":3,"img":["https://fxpoyosomio.github.io/Orpps/assets/images/img_ingredients/Épicerie/Épicerie salée/Huile et vinaigre/Vinaigre%20de%20vin%20rouge.jpg"]}];
 
         function updatePortions(delta) {
             const input = document.getElementById("portion-input");
@@ -503,6 +503,7 @@
 
 <script src="/Orpps/js/script.js"></script> <!-- Incluez votre fichier JS ici -->
 
+
 <!-- script pour forcer le nom du button bring! -->
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -515,7 +516,7 @@
             element.textContent = 'liste de course pour bring';
         }
     });
-    </script>
+</script>
 
 </body>
 </html>
