${RECIPE_NAME} : Update index.html

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -11,7 +11,7 @@
         "@context": "http://schema.org",
         "@type": "Recipe",
         "name": "Magret de canard (sauce au miel et thym)",
-        "recipeIngredient": ["2 , Magret de canard", "1 pincée, Piment d'Espellette", "4 cuil. à soupe, Miel de montagne", "0.25 , Citron jaune", "20 cl., Fond de veau", "null , Poivre noir", "40 g., Beurre Doux", "null , Sel fin", "4 cuil. à soupe, Vinaigre de vin rouge"]
+        "recipeIngredient": ["Magret de canard,2", "Piment d'Espellette,1pincée", "Miel de montagne,4cuil. à soupe", "Citron jaune,0.25", "Fond de veau,20cl.", "Poivre noir,null", "Beurre Doux,40g.", "Sel fin,null", "Vinaigre de vin rouge,4cuil. à soupe"]
         }
     </script>
 
