Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym) : Update index.html

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -511,7 +511,7 @@ document.addEventListener('DOMContentLoaded', function() {
         const element = document.querySelector('.bring-import-text-light');
 
         if (element) {
-            element.textContent = 'Nouveau texte';
+            element.textContent = 'Courses sur Bring!';
             clearInterval(checkElement); // Arrête de vérifier une fois trouvé
         }
     }, 500); // Vérifie toutes les 500 ms
