test nouveau bouton

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>                
             </div>
-
+            <button class="bring-button" data-items="Pommes, Bananes, Lait" data-name="Ma recette">Ajouter à Bring!</button>
 
             <div class="section-ingredient">
                 <div class="section-ingredient-container">
