--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main class="container">
         <h1>Bienvenue sur Orpps</h1>
         <p>Explorez nos super recettes et gérez votre planification et vos courses.</p>
+        <p> Coucou</p>
     </main>
 
     <!-- Inclure le footer -->
