--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+     <!-- head stuff -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://fxpoyosomio.github.io; style-src 'self' https://fxpoyosomio.github.io 'unsafe-inline'; connect-src 'self'">    <title>Orpps - Accueil</title>
@@ -26,3 +27,5 @@
     <script src="/Orpps/js/script.js"></script>
 </body>
 </html>
+
+
