--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -25,7 +25,7 @@
 
     <div class="page-container">
         <div class="container__img-recette">
-            <img src="`https://api.github.com/repos/FxPoyOsomio/Orpps/contents/recettes/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym)/assets/images/img_recette/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym).jpg`" class="img-recette" alt="image-recette"></img>
+            <img src="`/Orpps/contents/recettes/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym)/assets/images/img_recette/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym).jpg`" class="img-recette" alt="image-recette"></img>
         </div>
         <h1 class="titre-recette">Magret de canard (sauce au miel et thym)</h1>
         <div class="ingredients">
