ingredient-preparatio en font size 400

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -276,7 +276,8 @@
                     <div class="titre-section-border"></div>
                 </div>
             </div>
-
+            
+            <!-- section timing recette -->
             <div class="container__timings-recette">
                 <div class="sub-timing">
                     <div class="timing">
