--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -24,44 +24,53 @@
 </head>
 
 <body>
-    <div id="header"></div> <!-- Conteneur pour charger le header -->
+    <div id="header"></div> 
 
     <div class="page-container">
-        <div class="container__img-recette">
+
+        <div class="container__img-recette__two-column-page">
             <img src="https://fxpoyosomio.github.io/Orpps/recettes/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym)/assets/images/img_recette/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym).jpg"
                 class="img-recette" alt="image-recette"></img>
         </div>
+
         <div class="container__info-recette">
 
-            <div class="path-to-recette">
-                <span class="path-to-recette__link">
+            <div class="bread-crumbs">
+                <span class="bread-crumbs__link">
                     <h6>Accueil</h6>
                 </span>
                 <span style="padding: 0 8px;">
                     <h6 style="color: #CB6863;">></h6>
                 </span>
-                <span class="path-to-recette__link">
+                <span class="bread-crumbs__link">
                     <h6>Recettes</h6>
                 </span>
                 <span style="padding: 0 8px;">
                     <h6 style="color: #CB6863;">></h6>
                 </span>
-                <span class="path-to-recette__link">
+                <span class="bread-crumbs__link">
                     <h6>Plats</h6>
                 </span>
                 <span style="padding: 0 8px;">
                     <h6 style="color: #CB6863;">></h6>
                 </span>
-                <span class="path-to-recette__link">
+                <span class="bread-crumbs__link">
                     <h6>Viandes</h6>
                 </span>
-                
+
             </div>
 
 
             <h1 class="titre-recette">
                 Magret de canard (sauce au miel et thym)
             </h1>
+
+
+            <div class="container__img-recette__one-column-page">
+                <img src="https://fxpoyosomio.github.io/Orpps/recettes/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym)/assets/images/img_recette/Magret%20de%20canard%20(sauce%20au%20miel%20et%20thym).jpg"
+                    class="img-recette" alt="image-recette"></img>
+            </div>
+
 
             <div class="top-infos__recette">
                 <div class="top-info">
