--- a/recettes/Saumon en gravlax au sirop d'érable/index.html
+++ b/recettes/Saumon en gravlax au sirop d'érable/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saumon en gravlax au sirop d'érable</title>
-    <link href="" rel="stylesheet">
+    <link href="undefined" rel="stylesheet">
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
@@ -26,7 +26,7 @@
     <div class="page-container">
     
         <div class="container__img-recette__two-column-page">
-            <img src=""
+            <img src="undefined"
                 class="img-recette" alt="image-recette"></img>
         </div>
 
@@ -63,7 +63,7 @@
             </h1>
 
             <div class="container__img-recette__one-column-page">
-                <img src=""
+                <img src="undefined"
                     class="img-recette" alt="image-recette"></img>
             </div>
 
