Saumon en gravlax au sirop d'érable : Update index.html

--- a/recettes/Saumon en gravlax au sirop d'érable/index.html
+++ b/recettes/Saumon en gravlax au sirop d'érable/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saumon en gravlax au sirop d'érable</title>
-    <link href="https://fxpoyosomio.github.io/Orpps/recettes/Saumon%20en%20gravlax%20au%20sirop%20d'%C3%A9rable/assets/images/img_recette/Saumon%20en%20gravlax%20au%20sirop%20d'%C3%A9rable.jpg" rel="stylesheet">
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
@@ -63,7 +62,7 @@
             </h1>
 
             <div class="container__img-recette__one-column-page">
-                <img src="undefined"
+                <img src="https://fxpoyosomio.github.io/Orpps/recettes/Saumon%20en%20gravlax%20au%20sirop%20d'%C3%A9rable/assets/images/img_recette/Saumon%20en%20gravlax%20au%20sirop%20d'%C3%A9rable.jpg"
                     class="img-recette" alt="image-recette"></img>
             </div>
 
