Saumon en gravlax au sirop d'érable : Update index.html

--- a/recettes/Saumon en gravlax au sirop d'érable/index.html
+++ b/recettes/Saumon en gravlax au sirop d'érable/index.html
@@ -38,7 +38,7 @@
                 <span style="padding: 0 8px;">
                     <h6 style="color: #CB6863;">></h6>
                 </span>
-                <a class="bread-crumbs__link" href="https://fxpoyosomio.github.io/Orpps/recettes/">
+                <a class="bread-crumbs__link" href="https://fxpoyosomio.github.io/Orpps/recettes.html">
                     <h6>Recettes</h6>
                 </a>
                 <span style="padding: 0 8px;">
