ajout de inputmode="decimal" sur input portion pour essayer dafficher le clavier numérique sur mobile

--- a/recettes/Magret de canard (sauce au miel et thym)/index.html
+++ b/recettes/Magret de canard (sauce au miel et thym)/index.html
@@ -260,7 +260,7 @@
                         </div>
                         <div class="portion-control__value_container">
                             <div class="portion-control__value">
-                                <input type="text" id="portion-input" class="portion-control__value_number" value="6">
+                                <input type="text" inputmode="decimal" id="portion-input" class="portion-control__value_number" value="6">
                                 <span class="portion-control__unit">portions</span>
                             </div>
 
