modification ccs et CHEMIN racine sur index html

--- a/recettes/Saumon en gravlax au sirop d'érable/index.html
+++ b/recettes/Saumon en gravlax au sirop d'érable/index.html
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <p2 class="desciption-recette">
-                "Découvrez cette recette de saumon gravlax au sirop d'érable, une délicieuse alliance entre la fraîcheur du saumon et la douceur subtile de l'érable. Parfait pour un apéritif raffiné ou une entrée festive, ce plat scandinave revisité surprendra et ravira vos convives.“
+                "Saumon gravlax délicatement parfumé au sirop d’érable, aneth et épices.“
             </p2>
             <div class="call-to-action__buttons">
                 <primary-button text="liste de course" href="/Orpps/liste_de_course.html">
