--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://fxpoyosomio.github.io; style-src 'self' https://fxpoyosomio.github.io 'unsafe-inline'; connect-src 'self'">    <title>Orpps - Accueil</title>
     <link rel="icon" href="/Orpps/assets/images/logos_orpps/Orpps_favicon.png" type="image/png">
-    <link rel="stylesheet" href="/Orpps/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
@@ -28,7 +28,7 @@
     <div id="footer"></div>
 
     <!-- Scripts -->
-    <script src="/Orpps/js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
 
