--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <!-- head stuff -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://fxpoyosomio.github.io; style-src 'self' https://fxpoyosomio.github.io 'unsafe-inline'; connect-src 'self'">    <title>Orpps - Accueil</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://orpps.netlify.app/; style-src 'self' https://orpps.netlify.app/ 'unsafe-inline'; connect-src 'self'">    <title>Orpps - Accueil</title>
     <link rel="icon" href="/assets/images/logos_orpps/Orpps_favicon.png" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
