--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1>Bienvenue sur Orpps</h1>
         <p>Explorez nos super recettes et gérez votre planification et vos courses.</p>
         <p> Coucou</p>
-        <a href="https://fxpoyosomio.github.io/Orpps/recettes/Focaccia%20de%20G%C3%AAne/">Focaccia de Gêne</a>
-        <a href="https://fxpoyosomio.github.io/Orpps/recettes/Saumon%20en%20gravlax%20au%20sirop%20d'érable/">Saumon en gravlax au sirop d'érable
+        <a href="/recettes/Focaccia%20de%20G%C3%AAne/">Focaccia de Gêne</a>
+        <a href="/recettes/Saumon%20en%20gravlax%20au%20sirop%20d'érable/">Saumon en gravlax au sirop d'érable
         </a>
 
     </main>
