Test affichage list de recette dynamique avec API airtable

--- a/recettes.html
+++ b/recettes.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recettes</title>
-    <link rel="stylesheet" href="/Orpps/css/styles.css"> <!-- Incluez vos fichiers CSS ici -->
+    <link rel="stylesheet" href="/css/styles.css"> 
 </head>
 <body>
-    <div id="header"></div> <!-- Conteneur pour charger le header -->
+    <div id="header"></div>
 
     <main class="container">
         <h1>Recettes</h1>
         <p>Bienvenue sur la page des recettes !</p>
-        <!-- Ajoutez votre contenu ici -->
+        <div id="recipes-list">
     </main>
 
-    <script src="/Orpps/js/script.js"></script> <!-- Incluez votre fichier JS ici -->
+    <script src="/js/script.js"></script>
+    <script src="/js/recettes.js"></script>
 </body>
 </html>
