test utility netifly

--- a/recettes.html
+++ b/recettes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recettes</title>
     <link rel="stylesheet" href="/css/styles.css"> 
+    <link rel="stylesheet" href="/css/recettes.css"> 
 </head>
 <body>
     <div id="header"></div>
@@ -12,7 +13,11 @@
     <main class="container">
         <h1>Recettes</h1>
         <p>Bienvenue sur la page des recettes !</p>
-        <div id="recipes-list">
+            <!-- Liste des catégories -->
+            <div id="categories-list" class="categories-list"></div>
+
+            <!-- Liste des recettes -->
+            <div id="recettes-list" class="recettes-list"></div>
     </main>
 
     <script src="/js/script.js"></script>
