--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <!-- Scripts -->
     <script src="/js/script.js"></script>
+    <script src="/js/shared-header.js"></script>
 </body>
 </html>
 
