--- a/recettes.html
+++ b/recettes.html
@@ -21,6 +21,7 @@
     </main>
 
     <script src="/js/script.js"></script>
+    <script src="/js/shared-header.js"></script>
     <script src="/js/recettes.js"></script>
 </body>
 </html>
