--- a/recettes/Saumon en gravlax au sirop d'érable/index.html
+++ b/recettes/Saumon en gravlax au sirop d'érable/index.html
@@ -17,7 +17,7 @@
 
     <script async="async" src="//platform.getbring.com/widgets/import.js"></script>
     <link rel="stylesheet" href="/css/styles.css"> <!-- fichiers global CSS ici -->
-    <link rel="stylesheet" href="/css/recettes.css"> <!--  fichiers recettes CSS ici -->  
+    <link rel="stylesheet" href="/css/recette-details.css"> <!--  fichiers recettes CSS ici -->  
 </head>
 <body>
     <div id="header"></div> <!-- Conteneur pour charger le header -->
@@ -1026,6 +1026,8 @@ Le saumon gravlax peut être servi avec une Sauce gravlax (mayonnaise sucrée fo
     </script>
 
     <script src="/js/script.js"></script> <!-- Incluez votre fichier JS ici -->
+    <script src="/js/shared-header.js"></script>
+    <script src="/js/recette-details.js"></script>
 
 
     <!-- Script pour forcer le nom du bouton Bring! et remplacer l'image -->
