--- a/recettes.html
+++ b/recettes.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div id="header"></div>
-
     <main class="container">
         <h1 class="display_categorie__titre">Recettes</h1>
         <p>Bienvenue sur la page des recettes !</p>
@@ -19,9 +18,9 @@
             <!-- Liste des recettes -->
             <div id="recettes-list" class="recettes-list"></div>
     </main>
+    <div id="footer"></div>
+    <script src="/js/script.js" type="module"></script>
+    <script src="/js/recettes.js" type="module"></script>
 
-    <script src="/js/script.js"></script>
-    <script src="/js/shared-header.js"></script>
-    <script src="/js/recettes.js"></script>
 </body>
 </html>
