--- a/recettes/Saumon en gravlax au sirop d'érable/index.html
+++ b/recettes/Saumon en gravlax au sirop d'érable/index.html
@@ -1025,9 +1025,8 @@ Le saumon gravlax peut être servi avec une Sauce gravlax (mayonnaise sucrée fo
         });
     </script>
 
-    <script src="/js/script.js"></script> <!-- Incluez votre fichier JS ici -->
-    <script src="/js/shared-header.js"></script>
-    <script src="/js/recette-details.js"></script>
+    <script src="/js/script.js" type="module"></script>
+    <script src="/js/recette-details.js" type="module"></script>
 
 
     <!-- Script pour forcer le nom du bouton Bring! et remplacer l'image -->
