--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div id="footer"></div>
 
     <!-- Scripts -->
-    <script src="/js/script.js"></script>
-    <script src="/js/shared-header.js"></script>
+    <script src="/js/script.js" type="module"></script>
+    <!-- <script src="/js/shared-header.js"></script> -->
 </body>
 </html>
 
