Breadcrumbs dynamique FONCTIONNEL avec categories et subcategories

--- a/recettes/recette.html
+++ b/recettes/recette.html
@@ -40,7 +40,34 @@
 <body>
     <div id="header"></div> <!-- Conteneur pour charger le header -->
     <main>
-
+        <div class="container-bread-crumbs">
+            <div class="bread-crumbs">
+                <a class="bread-crumbs__link" href="/index.html">
+                    <h6>Accueil</h6>
+                </a>
+                <span style="padding: 0 8px;">
+                    <h6 style="color: #CB6863;">></h6>
+                </span>
+                <a class="bread-crumbs__link" href="/recettes.html">
+                    <h6>Recettes</h6>
+                </a>
+                <span style="padding: 0 8px;">
+                    <h6 style="color: #CB6863;">></h6>
+                </span>
+                <span id="breadCrumbs__categorieMenu" style="display: flex; flex-direction: row;">
+                </span>
+                <span style="padding: 0 8px;">
+                    <h6 style="color: #CB6863;">></h6>
+                </span>
+                <span id="breadCrumbs__subCategorieMenu" style="display: flex; flex-direction: row;">
+                </span>
+                <span style="padding: 0 8px;">
+                    <h6 style="color: #CB6863;">></h6>
+                </span>
+                <span id="breadCrumbs__tiltleRecette">
+                </span>
+            </div>
+        </div>
     </main>
     <div id="footer"></div>
     <script src="/js/script.js" type="module"></script> <!-- Incluez votre fichier JS ici -->
