fix structure schema.org

--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -37,18 +37,18 @@
         {
             "@context": "https://schema.org",
             "@type": "Recipe",
-            "name": {{recipe-title}},
-            "description": {{page-description}},
-            "image": {{recipe-image}},
+            "name": "{{recipe-title}}",
+            "description": "{{recipe-description}}",
+            "image": "{{recipe-image}}",
             "author": { "@type": "Person", "name": "François-Xavier Poy" },
-            "datePublished": {{recipe-createdDate}},
-            "recipeCategory": {{recipe-categoriesSubCategories}},
+            "datePublished": "{{recipe-createdDate}}",
+            "recipeCategory": "{{recipe-categoriesSubCategories}}",
             "prepTime": "PT{{recipe-prepDurationPT}},
-            "restTime": "PT"{{recipe-restDurationPT}},
-            "cookTime": "PT"{{recipe-cookDurationPT}},
-            "totalTime": "PT"{{recipe-totalDurationPT}},
-            "recipeYield": {{recipe-portion}},
-            "recipeIngredient": {{recipe-ingredientsList}},
+            "restTime": "PT{{recipe-restDurationPT}}",
+            "cookTime": "PT{{recipe-cookDurationPT}}",
+            "totalTime": "PT{{recipe-totalDurationPT}}",
+            "recipeYield": "{{recipe-portion}}",
+            "recipeIngredient": [{{recipe-ingredientsList}}],
         }
     </script>
 
