modif pour bring button

--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -43,7 +43,7 @@
             "author": { "@type": "Person", "name": "François-Xavier Poy" },
             "datePublished": "{{recipe-createdDate}}",
             "recipeCategory": "{{recipe-categoriesSubCategories}}",
-            "prepTime": "PT{{recipe-prepDurationPT}},
+            "prepTime": "PT{{recipe-prepDurationPT}}",
             "restTime": "PT{{recipe-restDurationPT}}",
             "cookTime": "PT{{recipe-cookDurationPT}}",
             "totalTime": "PT{{recipe-totalDurationPT}}",
@@ -226,7 +226,7 @@
                 <div class="portion-bring-conteneur">
                     <div class="bring-container">
                         <div id="bring-import-container" data-bring-import data-bring-language="fr"
-                            data-bring-theme="light" data-bring-base-quantity="" data-bring-requested-quantity="">
+                            data-bring-theme="light" data-bring-base-quantity="6" data-bring-requested-quantity="6">
                             <a href="https://www.getbring.com">Bring! Einkaufsliste App pour iPhone et Android</a>
                         </div>
                     </div>
