correction pour bring

--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -48,7 +48,7 @@
             "cookTime": "PT{{recipe-cookDurationPT}}",
             "totalTime": "PT{{recipe-totalDurationPT}}",
             "recipeYield": "{{recipe-portion}}",
-            "recipeIngredient": [{{recipe-ingredientsList}}],
+            "recipeIngredient": [{{recipe-ingredientsList}}]
         }
     </script>
 
@@ -225,8 +225,12 @@
                 </primary-button>
                 <div class="portion-bring-conteneur">
                     <div class="bring-container">
-                        <div id="bring-import-container" data-bring-import data-bring-language="fr"
-                            data-bring-theme="light" data-bring-base-quantity="6" data-bring-requested-quantity="6">
+                        <div id="bring-import-container" 
+                             data-bring-import 
+                             data-bring-language="fr" 
+                             data-bring-theme="light" 
+                             data-bring-base-quantity="6" 
+                             data-bring-requested-quantity="6">
                             <a href="https://www.getbring.com">Bring! Einkaufsliste App pour iPhone et Android</a>
                         </div>
                     </div>
