--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -507,6 +507,12 @@
         const originalIngredients = {{recipe-ingredientsListContent}};
 
         document.addEventListener("DOMContentLoaded", function () {
+            const bringContainer = document.getElementById("bring-import-container");
+            const basePortionInput = document.getElementById("portion-input").value.replace(',', '.'); // Conversion pour s'assurer d'un format correct
+            if (bringContainer) {
+                bringContainer.setAttribute("data-bring-base-quantity", basePortionInput);
+                bringContainer.setAttribute("data-bring-requested-quantity", basePortionInput);
+            }
             // Conversion initiale des valeurs des inputs en utilisant des virgules pour l'affichage
             document.querySelectorAll(".highlight-quantity input, #portion-input").forEach(input => {
                 if (input.value.includes('.')) {
@@ -540,12 +546,11 @@
             let portionValue = parseFloat(input.value.replace(',', '.')); // Remplacer la virgule par un point pour le calcul
             console.log("Nouvelle valeur des portions :", portionValue);
 
-            // Mise à jour des attributs Bring
+            // Mise à jour de la quantité demandée dans le widget Bring!
             const bringContainer = document.getElementById("bring-import-container");
             if (bringContainer) {
-                bringContainer.setAttribute("data-bring-base-quantity", portionValue);
                 bringContainer.setAttribute("data-bring-requested-quantity", portionValue);
-                console.log("Attributs data-bring mis à jour :", bringContainer.getAttribute("data-bring-base-quantity"), bringContainer.getAttribute("data-bring-requested-quantity"));
+                console.log("Quantité demandée dans Bring! mise à jour :", bringContainer.getAttribute("data-bring-requested-quantity"));
             }
 
             // Création de la liste des IDs d'ingrédients et mise à jour des quantités
