--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -508,11 +508,12 @@
 
         document.addEventListener("DOMContentLoaded", function () {
             const bringContainer = document.getElementById("bring-import-container");
-            const basePortionInput = document.getElementById("portion-input").value.replace(',', '.'); // Conversion pour s'assurer d'un format correct
-            if (bringContainer) {
-                bringContainer.setAttribute("data-bring-base-quantity", basePortionInput);
-                bringContainer.setAttribute("data-bring-requested-quantity", basePortionInput);
-            }
+            // Initialiser la quantité de base pour le widget Bring!
+            const initialPortion = parseFloat(document.getElementById("portion-input").value.replace(',', '.'));
+            window.bringwidgets.import.setBaseQuantity(initialPortion); // Définir la base une fois
+
+            // Mettre aussi à jour la quantité demandée initialement
+            window.bringwidgets.import.setRequestedQuantity(initialPortion);
             // Conversion initiale des valeurs des inputs en utilisant des virgules pour l'affichage
             document.querySelectorAll(".highlight-quantity input, #portion-input").forEach(input => {
                 if (input.value.includes('.')) {
@@ -546,12 +547,10 @@
             let portionValue = parseFloat(input.value.replace(',', '.')); // Remplacer la virgule par un point pour le calcul
             console.log("Nouvelle valeur des portions :", portionValue);
 
-            // Mise à jour de la quantité demandée dans le widget Bring!
-            const bringContainer = document.getElementById("bring-import-container");
-            if (bringContainer) {
-                bringContainer.setAttribute("data-bring-requested-quantity", portionValue);
-                console.log("Quantité demandée dans Bring! mise à jour :", bringContainer.getAttribute("data-bring-requested-quantity"));
-            }
+            // Utiliser setRequestedQuantity pour mettre à jour la quantité demandée dans le widget Bring!
+            window.bringwidgets.import.setRequestedQuantity(portionValue);
+            console.log("Quantité demandée dans Bring! mise à jour :", portionValue);
+
 
             // Création de la liste des IDs d'ingrédients et mise à jour des quantités
             originalIngredients.forEach(ingredient => {
