--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <title id="page-title">{{recipe-title}}</title> <!-- Contenu dynimique pour champs 'Titre recettes'  -->
     <meta name="description" id="page-description" content="{{recipe-description}}">
