--- a/recettes.html
+++ b/recettes.html
@@ -11,7 +11,7 @@
     <div id="header"></div>
     <main class="container">
         <h1 class="display_categorie__titre">Recettes</h1>
-        <p>Bienvenue sur la page des recettes !</p>
+        <div class="subCategories" id="subCategories"></div>
             <!-- Liste des catégories -->
             <div id="categories-list" class="categories-list"></div>
 
