--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -25,7 +25,7 @@
 
     <!-- Twitter Cards pour l’aperçu sur Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{{twitter-title}}" id="twitter-title">
+    <meta name="twitter:title" content="{{recipe-title}}" id="twitter-title">
     <!-- Contenu dynimique pour champs 'Titre recettes'  -->
     <meta name="twitter:description" content="{{recipe-description}}" id="twitter-description">
     <!-- Contenu dynimique pour champs 'Description recette'  -->
