--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -95,14 +95,14 @@
     </main>
     <div class="page-container">
         <div class="container__img-recette__two-column-page">
-            <img src="{{recipe-image}}" class="img-recette" id="imageRecette_twoColumn" alt="image-recette"></img>
+            <img src="{{recipe-image}}" srcset="{{recipe-image_srcset}}" class="img-recette" id="imageRecette_twoColumn" alt="image-recette"></img>
         </div>
         <div class="container__info-recette">
             <h1 class="titre-recette" id="titreRecette">
                 {{recipe-title}}
             </h1>
             <div class="container__img-recette__one-column-page">
-                <img src="{{recipe-image}}" class="img-recette" id="imageRecette_oneColumn" alt="image-recette"></img>
+                <img src="{{recipe-image}}" srcset="{{recipe-image_srcset}}" class="img-recette" id="imageRecette_oneColumn" alt="image-recette"></img>
             </div>
             <div class="top-infos__recette">
                 <div class="top-info">
