--- a/recettes.html
+++ b/recettes.html
@@ -9,14 +9,54 @@
 </head>
 <body>
     <div id="header"></div>
-    <main class="container">
-        <h1 class="display_categorie__titre">Recettes</h1>
-        <div class="subCategories" id="subCategories"></div>
-            <!-- Liste des catégories -->
-            <div id="categories-list" class="categories-list"></div>
 
-            <!-- Liste des recettes -->
-            <div id="recettes-list" class="recettes-list"></div>
+    <main class="container">
+        <div class="categories" id="categories">
+            <div class="category" id="Apéritif">
+                <h6>Apéritif</h6>
+            </div>
+            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+            <div class="category" id="Entrée">
+                <h6>Entrée</h6>
+            </div>
+            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+            <div class="category" id="Tapas">
+                <h6>Tapas</h6>
+            </div>
+            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+            <div class="category" id="Plat">
+                <h6>Plat</h6>
+            </div>
+            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+            <div class="category" id="Dessert">
+                <h6>Dessert</h6>
+            </div>
+            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+            <div class="category" id="Boisson">
+                <h6>Boisson</h6>
+            </div>
+        </div>
+
+        <div id="recettesSearchBar" class="recettes__search-bar" data-terms="">
+            <div class="recettes__search-content">
+                <div class="recettesSearch-bar__button" id="recettesSearchBarButton" style="margin-right: 10px; cursor: pointer;">
+                    <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#696969">
+                        <path d="M16.6725 16.6412L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="#696969" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                </div>
+                <input type="text" id="recettesSearchInput"  placeholder="Recherche" style="border: none; outline: none; flex: 1 1 0%; opacity: 1; transition: opacity 0.4s 0.3s; background-color: transparent;">
+            </div>
+        </div>
+
+        <h1 class="display_categorie__titre">Recettes</h1>
+
+        <div class="subCategories" id="subCategories"></div>
+
+
+
+
+        <!-- Liste des recettes -->
+        <div id="recettes-list" class="recettes-list"></div>
     </main>
     <div id="footer"></div>
     <script src="/js/script.js" type="module"></script>
