affichage des recettes dynamique en fonction du nouveau filtrage par donnée static

--- a/recettes.html
+++ b/recettes.html
@@ -11,29 +11,35 @@
     <div id="header"></div>
 
     <main class="container">
-        <div class="categories" id="categories">
-            <div class="category" id="Apéritif">
-                <h6>Apéritif</h6>
+        <div class="categories">
+            <div id="allRecipes">
+                <h6>Toutes les recettes</h6>
             </div>
-            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
-            <div class="category" id="Entrée">
-                <h6>Entrée</h6>
-            </div>
-            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
-            <div class="category" id="Tapas">
-                <h6>Tapas</h6>
-            </div>
-            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
-            <div class="category" id="Plat">
-                <h6>Plat</h6>
-            </div>
-            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
-            <div class="category" id="Dessert">
-                <h6>Dessert</h6>
-            </div>
-            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
-            <div class="category" id="Boisson">
-                <h6>Boisson</h6>
+            <span style="padding: 0 8px;"><h6 style="color: #CB6863;">></h6></span>
+            <div class="allCategories" id="categories">
+                <div class="category" id="Apéritif">
+                    <h6>Apéritif</h6>
+                </div>
+                <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+                <div class="category" id="Entrée">
+                    <h6>Entrée</h6>
+                </div>
+                <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+                <div class="category" id="Tapas">
+                    <h6>Tapas</h6>
+                </div>
+                <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+                <div class="category" id="Plat">
+                    <h6>Plat</h6>
+                </div>
+                <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+                <div class="category" id="Dessert">
+                    <h6>Dessert</h6>
+                </div>
+                <span style="padding: 0 8px;"><h6 style="color: #CB6863;">•</h6></span>
+                <div class="category" id="Boisson">
+                    <h6>Boisson</h6>
+                </div>
             </div>
         </div>
 
@@ -48,7 +54,7 @@
             </div>
         </div>
 
-        <h1 class="display_categorie__titre">Recettes</h1>
+        <h1 class="display_categorie__titre">Toutes les recettes</h1>
 
         <div class="subCategories" id="subCategories"></div>
 
