--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Espace personnel</title>
-    <link rel="stylesheet" href="/css/styles.css"> 
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <div id="header"></div>
@@ -28,16 +27,18 @@
                  data-size="large"
                  data-logo_alignment="left">
             </div>
-          </div>
-      
-          <!-- Contenu de l’espace personnel -->
-          <div id="personal-space-content" style="display: none;">
+        </div>
+
+        <!-- Contenu de l’espace personnel -->
+        <div id="personal-space-content" style="display: none;">
             <h2>Bienvenue dans votre espace personnel</h2>
             <p id="user-email"></p>
-          </div>
+        </div>
     </main>
     <div id="footer"></div>
     <script src="/js/script.js" type="module"></script>
     <script src="/js/espace_personnel.js"></script>
+    <!-- Placez le script Google après -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </body>
 </html>
