--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -33,6 +33,7 @@
         <div id="personal-space-content" style="display: none;">
             <h2>Bienvenue dans votre espace personnel</h2>
             <p id="user-email"></p>
+            <button id="logout-button">Se déconnecter</button>
         </div>
     </main>
     <div id="footer"></div>
