Update a priori FONCTIONELLE pour add et get favory

--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -237,7 +237,7 @@
                 </div>
                 <div class="secondary-buttons">
 
-                    <add-favorite-button></add-favorite-button>
+                    <add-favorite-button data-recipe-id="{{recipe-id}}"></add-favorite-button>
                     <share-button></share-button>
 
                 </div>
