--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -5,41 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Espace personnel</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
     <div id="header"></div>
     <main class="container">
-        <div id="google-signin-container">
-            <h2>Connectez-vous pour accéder à votre espace personnel</h2>
-            <!-- Bouton de connexion Google -->
-            <div id="g_id_onload"
-                 data-client_id="1025675637210-co26vnloal7eaf1ijfvid3pbgmcv6d2p.apps.googleusercontent.com"
-                 data-context="signin"
-                 data-ux_mode="popup"
-                 data-callback="handleCredentialResponse"
-                 data-auto_prompt="false">
-            </div>
-            <div class="g_id_signin"
-                 data-type="standard"
-                 data-shape="rectangular"
-                 data-theme="outline"
-                 data-text="sign_in_with"
-                 data-size="large"
-                 data-logo_alignment="left">
-            </div>
-        </div>
+        <button id="loginButton">Se connecter</button>
+        <button id="logoutButton" style="display: none;">Se déconnecter</button>
 
-        <!-- Contenu de l’espace personnel -->
-        <div id="personal-space-content" style="display: none;">
-            <h2>Bienvenue dans votre espace personnel</h2>
-            <p id="user-email"></p>
-            <button id="logout-button">Se déconnecter</button>
-        </div>
     </main>
     <div id="footer"></div>
     <script src="/js/script.js" type="module"></script>
     <script src="/js/espace_personnel.js"></script>
-    <!-- Placez le script Google après -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
 </body>
 </html>
