--- a/recettes.html
+++ b/recettes.html
@@ -6,6 +6,8 @@
     <title>Recettes</title>
     <link rel="stylesheet" href="/css/styles.css"> 
     <link rel="stylesheet" href="/css/recettes.css"> 
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 <body>
     <div id="header"></div>
