update identity netlify

--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -11,7 +11,7 @@
     <div id="header"></div>
     <main class="container">
         <button id="loginButton">Se connecter</button>
-        <button id="logoutButton" style="display: none;">Se déconnecter</button>
+        <button id="logoutButton" style="display: none;">se déconnecter</button>
 
     </main>
     <div id="footer"></div>
