--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
      <!-- head stuff -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://orpps.netlify.app/; style-src 'self' https://orpps.netlify.app/ 'unsafe-inline'; script-src 'self' 'unsafe-inline'; connect-src 'self'">
-    <meta name="google-site-verification" content="dqFfV8maJ4fH_uKnFjUkk60zWMan6OuBY1sT-rvjymc" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://orpps.netlify.app/; style-src 'self' https://orpps.netlify.app/ 'unsafe-inline'; script-src 'self' 'unsafe-inline'; script-src 'self' https://identity.netlify.com; connect-src 'self'">
     <title>Orpps - Accueil</title>
     <link rel="icon" href="/assets/images/logos_orpps/Orpps_favicon.png" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
