--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div id="footer"></div>
 
     <!-- Scripts -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script src="/js/script.js" type="module"></script>
+
     <!-- <script src="/js/shared-header.js"></script> -->
 </body>
 </html>
