--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Orpps - Accueil</title>
     <link rel="icon" href="/assets/images/logos_orpps/Orpps_favicon.png" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
+    <script src="https://unpkg.com/netlify-identity-widget@latest/netlify-identity-widget.min.js" defer></script>
     <script>
         // Capturer immédiatement le hash avant que quoi que ce soit ne l'écrase
         if (window.location.hash.includes('invite_token')) {
